--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    // bcrypt
-    implementation 'at.favre.lib:bcrypt:0.10.2'
+    // Spring Security 의존성
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // jwt
     compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
